Get querry & show it. WIP executing to a connectionstring not working

--- a/src/dbf2sql/dbf2sql.csproj
+++ b/src/dbf2sql/dbf2sql.csproj
@@ -6,11 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PublishAot>true</PublishAot>
-    <InvariantGlobalization>true</InvariantGlobalization>
+    <InvariantGlobalization>false</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    <PackageReference Include="DS.Foundation.Data" Version="8.1.4" />
   </ItemGroup>
 
   <ItemGroup>
